<resources>
    <string name="app_name">BookSearch</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>



    <!--下面是guillotine的string-->
    <!--<string name="app_name">Guillotine</string>-->
    <string name="personal">个人资料</string>
    <string name="group">小组</string>
    <string name="mission">任务</string>
    <string name="settings">设置</string>
    <!---->
    <string name="feedback">反馈</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

</resources>
