<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btnSetting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@color/grey"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <Button
        android:id="@+id/btnFeedBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@color/greenyellow"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />



    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dip"
        android:background="@color/button_logout_background"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

</LinearLayout>